
Audio output:
 * ALSA: HDMI passthrough support.
   Use --alsa-passthrough to configure S/PDIF or HDMI passthrough.

Demuxer:
 * Support for HEIF image and grid image formats
 * Support for DASH WebM
 * Support for DVBSUB in mkv
 * Support for DAV video files
 * Improved Bluray menus, clips and stream selection
 * Support chapters in mp3 files

Codecs:
 * Support for experimental AV1 video encoding
 * WebVTT encoder
 * Remove iomx support for Android
 * WebP image decoding
 * Support for SMPTE-TT image profile
 * Support for 16-bit greyscale
 * Support IMM4 decoder
 * Improve 708 decoder
 * Support AGM decoder
 * Support VP4 decoder
 * Add NVDEC hardware decoder

Access:
 * Enable SMB2 / SMB3 support on mobile ports with libsmb2
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol
 * Added support for the AMT (Automatic Multicast Tunneling) Protocol
 * Added avaudiocapture module as a replacement for qtsound, which is removed now
 * Audio CD data tracks are now correctly detected and skipped
 * Deprecates Audio CD CDDB lookups in favor of more accurate Musicbrainz
 * Improved CD-TEXT and added Shift-JIS encoding support

Access output:
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin

Video filter:
 * Update yadif
 * Remove remote OSD plugin

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers

Muxers:
 * MP4 files are no longer faststart by default

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support
 * Improved AppleScript API with support for playback modes, recording, rate

appleOS:
 * Improved proxy configuration handling


Changes between 3.0.6 and 3.0.7: